// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the base component correctly 1`] = `
<div>
  <style>
    
  .Opportunity-styles__root {
    position: relative;
    font-size: 1rem;
    font-family: LatoWeb, Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: 400;
    color: #2D3B45;
    background: #FFFFFF;
    padding: undefined;
    box-sizing: border-box;
    line-height: 1.25;
  }
  
  .Opportunity-styles__oppNameAndTitle {
    max-width: 16.5rem;
  }
  
  .Opportunity-styles__oppName {
    box-sizing: border-box;
    min-width: 1px;
    flex: 1;
    padding-top: 0.375rem;
    text-transform: uppercase;
    letter-spacing: 0.0625rem;
    color: #8B969E;
    font-size: 0.875rem;
    margin-right: 1.75rem;
  }
  
  .Opportunity-styles__title {
    margin-bottom: 0.5rem;
  }
  
  .Opportunity-styles__close {
    position: absolute;
    top: 0;
    offset-inline-end: 0;
  }
  [dir="ltr"] .Opportunity-styles__close {
    right: 0;
  }
  [dir="rtl"] .Opportunity-styles__close {
    left: 0;
  }
  
  .Opportunity-styles__oppName,
  .Opportunity-styles__title {
    overflow-wrap: break-word;
    word-wrap: break-word;
    hyphens: auto;
  }
  
  .Opportunity-styles__footer {
    box-sizing: border-box;
    display: flex;
    align-items: flex-end;
    justify-content: space-between;
    padding-inline-end: 0.5rem;
  }
  
  .Opportunity-styles__status {
    box-sizing: border-box;
    min-width: 1px;
    flex-grow: 1;
    padding-inline-end: 0.75rem;
  }
  
  .Opportunity-styles__points {
    box-sizing: border-box;
    min-width: 1px;
    flex-shrink: 0;
    text-align: end;
    color: #8B969E;
    text-transform: uppercase;
    font-size: 0.75rem;
    line-height: 1.125;
  }
  
  .Opportunity-styles__pointsNumber {
    display: block;
    font-size: 1.375rem;
  }
  
  .Opportunity-styles__due {
    margin-top: 0.375rem;
    font-size: 0.75rem;
    color: #8B969E;
  }
  
  .Opportunity-styles__dueText {
    font-weight: 700;
  }
  
  </style>
  <div
    class="Opportunity-styles__root"
  >
    <div
      class="Opportunity-styles__oppNameAndTitle"
    >
      <div
        class="Opportunity-styles__oppName"
      >
        course about stuff
      </div>
      <div
        class="Opportunity-styles__title"
      >
        <a
          class="css-1nomc8s-view-link"
          dir="ltr"
          href="http://www.non_default_url.com"
        >
          this is a description about the opportunity
        </a>
      </div>
    </div>
    <div
      class="Opportunity-styles__footer"
    >
      <div
        class="Opportunity-styles__status"
      >
        <span
          class="css-hfc3f4-view--inlineBlock"
          dir="ltr"
        >
          <div
            class="css-gm76px-pill"
          >
            <div
              class="css-xbajoi-pill__text"
            >
              Missing
            </div>
          </div>
        </span>
        <div
          class="Opportunity-styles__due"
        >
          <span
            class="Opportunity-styles__dueText"
          >
            Due:
          </span>
           
          March 9, 2017 at 1:40 PM
        </div>
      </div>
      <div
        class="Opportunity-styles__points"
      >
        <span
          class="css-1sr5vj2-screenReaderContent"
        >
          20 points
        </span>
        <span
          aria-hidden="true"
        >
          <span
            class="Opportunity-styles__pointsNumber"
          >
            20
          </span>
          points
        </span>
      </div>
    </div>
    <div
      class="Opportunity-styles__close"
    >
      <button
        class="css-1hj8nz2-view--inlineBlock-baseButton"
        cursor="pointer"
        dir="ltr"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1leqwnv-baseButton__content"
        >
          <span
            class="css-qi8ml9-baseButton__childrenLayout"
          >
            <span
              class="css-5udsuu-baseButton__iconOnly"
            >
              <span
                class="css-31gkb3-baseButton__iconSVG"
              >
                <svg
                  aria-hidden="true"
                  class="css-1uh2md0-inlineSVG-svgIcon"
                  focusable="false"
                  height="1em"
                  name="IconX"
                  role="presentation"
                  rotate="0"
                  style="width: 1em; height: 1em;"
                  viewBox="0 0 1920 1920"
                  width="1em"
                >
                  <g
                    role="presentation"
                  >
                    <path
                      d="M954.64 826.418 426.667 298.445 298.445 426.667 826.418 954.64l-527.973 527.973 128.222 128.222 527.973-527.973 527.973 527.973 128.222-128.222-527.973-527.973 527.973-527.973-128.222-128.222z"
                    />
                  </g>
                </svg>
              </span>
              <span
                class="css-1sr5vj2-screenReaderContent"
              >
                Dismiss this is a description about the opportunity
              </span>
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders the base component correctly with 0 points 1`] = `
<div>
  <style>
    
  .Opportunity-styles__root {
    position: relative;
    font-size: 1rem;
    font-family: LatoWeb, Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: 400;
    color: #2D3B45;
    background: #FFFFFF;
    padding: undefined;
    box-sizing: border-box;
    line-height: 1.25;
  }
  
  .Opportunity-styles__oppNameAndTitle {
    max-width: 16.5rem;
  }
  
  .Opportunity-styles__oppName {
    box-sizing: border-box;
    min-width: 1px;
    flex: 1;
    padding-top: 0.375rem;
    text-transform: uppercase;
    letter-spacing: 0.0625rem;
    color: #8B969E;
    font-size: 0.875rem;
    margin-right: 1.75rem;
  }
  
  .Opportunity-styles__title {
    margin-bottom: 0.5rem;
  }
  
  .Opportunity-styles__close {
    position: absolute;
    top: 0;
    offset-inline-end: 0;
  }
  [dir="ltr"] .Opportunity-styles__close {
    right: 0;
  }
  [dir="rtl"] .Opportunity-styles__close {
    left: 0;
  }
  
  .Opportunity-styles__oppName,
  .Opportunity-styles__title {
    overflow-wrap: break-word;
    word-wrap: break-word;
    hyphens: auto;
  }
  
  .Opportunity-styles__footer {
    box-sizing: border-box;
    display: flex;
    align-items: flex-end;
    justify-content: space-between;
    padding-inline-end: 0.5rem;
  }
  
  .Opportunity-styles__status {
    box-sizing: border-box;
    min-width: 1px;
    flex-grow: 1;
    padding-inline-end: 0.75rem;
  }
  
  .Opportunity-styles__points {
    box-sizing: border-box;
    min-width: 1px;
    flex-shrink: 0;
    text-align: end;
    color: #8B969E;
    text-transform: uppercase;
    font-size: 0.75rem;
    line-height: 1.125;
  }
  
  .Opportunity-styles__pointsNumber {
    display: block;
    font-size: 1.375rem;
  }
  
  .Opportunity-styles__due {
    margin-top: 0.375rem;
    font-size: 0.75rem;
    color: #8B969E;
  }
  
  .Opportunity-styles__dueText {
    font-weight: 700;
  }
  
  </style>
  <div
    class="Opportunity-styles__root"
  >
    <div
      class="Opportunity-styles__oppNameAndTitle"
    >
      <div
        class="Opportunity-styles__oppName"
      >
        course about stuff
      </div>
      <div
        class="Opportunity-styles__title"
      >
        <a
          class="css-1nomc8s-view-link"
          dir="ltr"
          href="http://www.non_default_url.com"
        >
          this is a description about the opportunity
        </a>
      </div>
    </div>
    <div
      class="Opportunity-styles__footer"
    >
      <div
        class="Opportunity-styles__status"
      >
        <span
          class="css-hfc3f4-view--inlineBlock"
          dir="ltr"
        >
          <div
            class="css-gm76px-pill"
          >
            <div
              class="css-xbajoi-pill__text"
            >
              Missing
            </div>
          </div>
        </span>
        <div
          class="Opportunity-styles__due"
        >
          <span
            class="Opportunity-styles__dueText"
          >
            Due:
          </span>
           
          March 9, 2017 at 1:40 PM
        </div>
      </div>
      <div
        class="Opportunity-styles__points"
      >
        <span
          class="css-1sr5vj2-screenReaderContent"
        >
          0 points
        </span>
        <span
          aria-hidden="true"
        >
          <span
            class="Opportunity-styles__pointsNumber"
          >
            0
          </span>
          points
        </span>
      </div>
    </div>
    <div
      class="Opportunity-styles__close"
    >
      <button
        class="css-1hj8nz2-view--inlineBlock-baseButton"
        cursor="pointer"
        dir="ltr"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1leqwnv-baseButton__content"
        >
          <span
            class="css-qi8ml9-baseButton__childrenLayout"
          >
            <span
              class="css-5udsuu-baseButton__iconOnly"
            >
              <span
                class="css-31gkb3-baseButton__iconSVG"
              >
                <svg
                  aria-hidden="true"
                  class="css-1uh2md0-inlineSVG-svgIcon"
                  focusable="false"
                  height="1em"
                  name="IconX"
                  role="presentation"
                  rotate="0"
                  style="width: 1em; height: 1em;"
                  viewBox="0 0 1920 1920"
                  width="1em"
                >
                  <g
                    role="presentation"
                  >
                    <path
                      d="M954.64 826.418 426.667 298.445 298.445 426.667 826.418 954.64l-527.973 527.973 128.222 128.222 527.973-527.973 527.973 527.973 128.222-128.222-527.973-527.973 527.973-527.973-128.222-128.222z"
                    />
                  </g>
                </svg>
              </span>
              <span
                class="css-1sr5vj2-screenReaderContent"
              >
                Dismiss this is a description about the opportunity
              </span>
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders the base component correctly without points 1`] = `
<div>
  <style>
    
  .Opportunity-styles__root {
    position: relative;
    font-size: 1rem;
    font-family: LatoWeb, Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: 400;
    color: #2D3B45;
    background: #FFFFFF;
    padding: undefined;
    box-sizing: border-box;
    line-height: 1.25;
  }
  
  .Opportunity-styles__oppNameAndTitle {
    max-width: 16.5rem;
  }
  
  .Opportunity-styles__oppName {
    box-sizing: border-box;
    min-width: 1px;
    flex: 1;
    padding-top: 0.375rem;
    text-transform: uppercase;
    letter-spacing: 0.0625rem;
    color: #8B969E;
    font-size: 0.875rem;
    margin-right: 1.75rem;
  }
  
  .Opportunity-styles__title {
    margin-bottom: 0.5rem;
  }
  
  .Opportunity-styles__close {
    position: absolute;
    top: 0;
    offset-inline-end: 0;
  }
  [dir="ltr"] .Opportunity-styles__close {
    right: 0;
  }
  [dir="rtl"] .Opportunity-styles__close {
    left: 0;
  }
  
  .Opportunity-styles__oppName,
  .Opportunity-styles__title {
    overflow-wrap: break-word;
    word-wrap: break-word;
    hyphens: auto;
  }
  
  .Opportunity-styles__footer {
    box-sizing: border-box;
    display: flex;
    align-items: flex-end;
    justify-content: space-between;
    padding-inline-end: 0.5rem;
  }
  
  .Opportunity-styles__status {
    box-sizing: border-box;
    min-width: 1px;
    flex-grow: 1;
    padding-inline-end: 0.75rem;
  }
  
  .Opportunity-styles__points {
    box-sizing: border-box;
    min-width: 1px;
    flex-shrink: 0;
    text-align: end;
    color: #8B969E;
    text-transform: uppercase;
    font-size: 0.75rem;
    line-height: 1.125;
  }
  
  .Opportunity-styles__pointsNumber {
    display: block;
    font-size: 1.375rem;
  }
  
  .Opportunity-styles__due {
    margin-top: 0.375rem;
    font-size: 0.75rem;
    color: #8B969E;
  }
  
  .Opportunity-styles__dueText {
    font-weight: 700;
  }
  
  </style>
  <div
    class="Opportunity-styles__root"
  >
    <div
      class="Opportunity-styles__oppNameAndTitle"
    >
      <div
        class="Opportunity-styles__oppName"
      >
        course about stuff
      </div>
      <div
        class="Opportunity-styles__title"
      >
        <a
          class="css-1nomc8s-view-link"
          dir="ltr"
          href="http://www.non_default_url.com"
        >
          this is a description about the opportunity
        </a>
      </div>
    </div>
    <div
      class="Opportunity-styles__footer"
    >
      <div
        class="Opportunity-styles__status"
      >
        <span
          class="css-hfc3f4-view--inlineBlock"
          dir="ltr"
        >
          <div
            class="css-gm76px-pill"
          >
            <div
              class="css-xbajoi-pill__text"
            >
              Missing
            </div>
          </div>
        </span>
        <div
          class="Opportunity-styles__due"
        >
          <span
            class="Opportunity-styles__dueText"
          >
            Due:
          </span>
           
          March 9, 2017 at 1:40 PM
        </div>
      </div>
      <span
        class="css-1sr5vj2-screenReaderContent"
      >
        There are no points associated with this item
      </span>
    </div>
    <div
      class="Opportunity-styles__close"
    >
      <button
        class="css-1hj8nz2-view--inlineBlock-baseButton"
        cursor="pointer"
        dir="ltr"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1leqwnv-baseButton__content"
        >
          <span
            class="css-qi8ml9-baseButton__childrenLayout"
          >
            <span
              class="css-5udsuu-baseButton__iconOnly"
            >
              <span
                class="css-31gkb3-baseButton__iconSVG"
              >
                <svg
                  aria-hidden="true"
                  class="css-1uh2md0-inlineSVG-svgIcon"
                  focusable="false"
                  height="1em"
                  name="IconX"
                  role="presentation"
                  rotate="0"
                  style="width: 1em; height: 1em;"
                  viewBox="0 0 1920 1920"
                  width="1em"
                >
                  <g
                    role="presentation"
                  >
                    <path
                      d="M954.64 826.418 426.667 298.445 298.445 426.667 826.418 954.64l-527.973 527.973 128.222 128.222 527.973-527.973 527.973 527.973 128.222-128.222-527.973-527.973 527.973-527.973-128.222-128.222z"
                    />
                  </g>
                </svg>
              </span>
              <span
                class="css-1sr5vj2-screenReaderContent"
              >
                Dismiss this is a description about the opportunity
              </span>
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;
